# chessboard-transform

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
chessboard_transform/: chessboard_transform.py
src/: chessboard_transform.cpp  parameters.yaml
